--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="search">Search</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="favorite">Favorite</string>
-    <string name="forum">Forum</string>
+    <string name="messaging">Messaging</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="logout">Logout</string>
