--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="email">Email</string>
     <string name="holder_username">holder username</string>
     <string name="already_have_an_account_login">Already have an account? Login</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
 </resources>
