--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="update_info">Update Info</string>
     <string name="info_email_com">info@Email.com</string>
     <string name="email_item">Email</string>
+    <string name="begin_movie_search">Begin Movie Search.</string>
 </resources>
